--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-logo: [./cmp_logo_s.png]
-title: [(cmp)]
-description: [A study of an interpreter handling measurement
-program definitions written in clojure.]
+logo: ./cmp_logo_s.png
+title: cmp
+description: A study of an interpreter handling measurement
+program definitions written in clojure.
