--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-midnight
 logo: ./cmp_logo_s.png
 title: cmp
 description: A study of an interpreter of measurement program definitions written in clojure.
